# dtu-mlops-project

./: .coveragerc  .example.env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yml  data.dvc  entrypoint.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  train_config_cpu.example.yml  train_config_cpu.yml
.dvc/: config
.github/workflows/: ci.yml
configs/: infer.yaml  train.yaml
configs/datamodule/: speechcmd.yaml
configs/model/: resnet18.yaml  resnet34.yaml  resnet50.yaml
configs/predict/: default.yaml  eight.yaml  forward.yaml
configs/trainer/: default.yaml
data/processed/: class_idx_export.npy
data/raw/: data.zip.dvc
docker/: deploy.dockerfile  train.dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
dtu_mlops_project/configs/: train.yaml
dtu_mlops_project/configs/datamodule/: speechcmd.yaml  speechcmd_train.yaml
dtu_mlops_project/configs/logger/: wandb.yaml
dtu_mlops_project/configs/model/: resnet50.yaml
dtu_mlops_project/configs/trainer/: default.yaml
dtu_mlops_project/data/: data_utils.py  download_dataset.py  speechcmd.py
dtu_mlops_project/models/: download_models.py  model.py  predict_model.py  train_model.py
dtu_mlops_project/visualization/: visualize.py
dtu_mlops_project/webapp/: config.py  gui.py  main.py
reports/: README.md
src/data/: download_dataset.py  make_dataset.py
src/models/: train_model.py
tests/models/: test_data.py  test_model_class.py  test_train_model.py
