[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu-mlops-project"
version = "0.1.0"
description = "Coursework for Machine Learning Operations class at DTU"
authors = [
    { name = "Boris Rakovan", email = "b.rakovan@gmail.com"},
    { name = "Berend Schuit" },
    { name = "Riccardo Miccini" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["dtu_mlops_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
